--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,eclipse,intellij,java,react,python,pycharm
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,eclipse,intellij,java,react,python,pycharm
+# Created by https://www.toptal.com/developers/gitignore/api/react,eclipse,intellij,java,python,pycharm,maven,visualstudiocode,progressabl
+# Edit at https://www.toptal.com/developers/gitignore?templates=react,eclipse,intellij,java,python,pycharm,maven,visualstudiocode,progressabl
+
+##파일 무시
+plan.txt
+## 폴더 무시
+planer/
+
 
 ### Eclipse ###
 .metadata
@@ -206,6 +212,52 @@ fabric.properties
 hs_err_pid*
 replay_pid*
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+### ProgressABL ###
+# Developer Studio
+/.dbconnection
+/.project
+/.propath
+/debugger.pref
+/protrace*
+*.r
+*.pl
+
+# DataDigger
+DataDigger/Cache
+DataDigger/backup
+DataDigger/DataDigger-*.ini
+DataDigger/DataDigger*.log
+
+# General folders
+/old/
+/debug/
+
+# General files
+.gitignore
+*.bck
+*.old
+*- Copy.*
+*- Copy (*).*
+
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -356,7 +408,6 @@ docs/_build/
 
 # PyBuilder
 .pybuilder/
-target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -486,30 +537,4 @@ sketch
 .history
 .ionide
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,eclipse,intellij,java,react,python,pycharm
+# End of https://www.toptal.com/developers/gitignore/api/react,eclipse,intellij,java,python,pycharm,maven,visualstudiocode,progressabl
