--- a/BE/shipsupply/src/main/resources/application.yml
+++ b/BE/shipsupply/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
           google:
             client-id: 1050135280688-bgoki6c46rsshsbm68ru5mh075qnhlvn.apps.googleusercontent.com
             client-secret: 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
+logging:
+  level:
+    org.springframework.security: DEBUG
 
 
 jwt:
