--- a/BE/shipsupply/src/main/resources/application.yml
+++ b/BE/shipsupply/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
       client:
         registration:
           google:
-            client-id: 1050135280688-bgoki6c46rsshsbm68ru5mh075qnhlvn.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 
+            client-secret: 
 logging:
   level:
     org.springframework.security: DEBUG
