--- a/BE/shipsupply/src/main/resources/application.yml
+++ b/BE/shipsupply/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ship?serverTimezone=Asia/Seoul
-    username: 
+    username:
     password: 
 
   jpa:
@@ -21,6 +21,8 @@ spring:
           google:
             client-id: 
             client-secret: 
+            scope: profile, email
+
 
 
 jwt:
