--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=react,eclipse,intellij,java,python,pycharm,maven,visualstudiocode,progressabl
 
 ##파일 무시
+application.yml
 plan.txt
 test.py
 
@@ -12,6 +13,7 @@ marinesoft/
 data/
 data1/
 code/
+.gradle/
 
 ### Eclipse ###
 .metadata
